border fix and spacing

--- a/styles.css
+++ b/styles.css
@@ -37,11 +37,15 @@ text-align: center;
 header h1 {
   margin-top: 0px;
 }
+main h2 {
+  margin-top: 48px;
+  margin-bottom: 5px;
+}
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 100%;
   }
   .important {
     text-align: center;
@@ -94,4 +98,8 @@ main p {
   background-color: rgb(158, 158, 158);
   background-size: auto;
   margin-bottom: 48px;
+  border-style: solid;
+  border-color: whitesmoke;
+  border-width: 5px;
+  background-color: rgb(158, 158, 158);
 }
